# mlops_learner

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md
days/day-01/: README.md  requirements.txt  setup.sh  walkthrough.md
days/day-02/: README.md  jupyter_lab_config.py  start.sh  walkthrough.md
days/day-03/: README.md  compile.sh  requirements.in  walkthrough.md
days/day-04/: README.md  fix.sh  walkthrough.md
days/day-04/fraud-detection/: requirements.txt
days/day-05/: Makefile  README.md  walkthrough.md
days/day-06/: README.md  check.sh  pyproject.toml  walkthrough.md
days/day-07/: README.md  build.sh  pyproject.toml  walkthrough.md
days/day-08/: .pre-commit-config.yaml  README.md  walkthrough.md
days/day-09/: README.md  cookiecutter.json  walkthrough.md
days/day-09/{{cookiecutter.project_name}}/: README.md
days/day-10/: README.md  walkthrough.md
days/day-11/: README.md  walkthrough.md
days/day-12/: README.md  walkthrough.md
days/day-13/: README.md  walkthrough.md
days/day-14/: README.md  dvc.yaml  walkthrough.md
days/day-15/: README.md  walkthrough.md
notes/: README.md  code-quality.md  docker-for-python.md  dvc.md  git-internals.md  git-undo.md  jinja2.md  makefile.md  ml-project-layout.md  pre-commit.md  python-packaging.md
projects/: README.md
projects/mlops-learner-template/: README.md
